Small changes to fix overflow in login

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,6 +14,7 @@ a {
 }
 
 body {
+    overflow: hidden;
     width: 100%;
     height: 100%;
 }
